--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,32 @@
-spring.application.name=wellfit
+spring.application.name=Wellfit
 
+server.port=8096
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# MySQL 연결 설정
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db-3295s4-kr.vpc-pub-cdb.ntruss.com:3306/wellfit-dev?serverTimezone=Asia/Seoul
+spring.datasource.username=manager
+spring.datasource.password=bitcamp!@#123
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+file.upload-dir=C:/wellfit/upload/profile
+
+# MyBatis 설정
+mybatis.type-aliases-package=data.dto
+mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.configuration.cache-enabled=false
+mybatis.configuration.lazy-loading-enabled=true
+
+# DB 커넥션 풀 설정
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+# 로그 레벨 설정
+logging.level.data.mapper=DEBUG
