--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=wellfit
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db-3295s4-kr.vpc-pub-cdb.ntruss.com:3306/wellfit-dev?serverTimezone=Asia/Seoul
+spring.datasource.username=manager
+spring.datasource.password=bitcamp!@#123
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+mybatis.type-aliases-package=com.example.demo.dto
+mybatis.mapper-locations=/mapper/**/*.xml
