--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=bitcamp!@#123
 
 mybatis.type-aliases-package=com.example.demo.dto
 mybatis.mapper-locations=/mapper/**/*.xml
+
+# MyBatis 로그 설정
+logging.level.org.mybatis=DEBUG
+logging.level.com.example.demo=DEBUG
