--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=wellfit
 
+# mysql setting
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://db-3295s4-kr.vpc-pub-cdb.ntruss.com/wellfit-dev?serverTimezone=Asia/Seoul
+spring.datasource.username=manager
+spring.datasource.password=bitcamp!@#123
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+# mybatis setting
+mybatis.type-aliases-package=com.example.demo.dto
+mybatis.mapper-locations=/mapper/**/*.xml
+mybatis.spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+# elasticsearch setting
+spring.elasticsearch.uris=http://223.130.129.227:9200
