--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=bitcamp!@#123
 # mybatis setting
 mybatis.type-aliases-package=com.example.demo.dto
 mybatis.mapper-locations=/mapper/**/*.xml
-mybatis.spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+mybatis.configuration.map-underscore-to-camel-case=true
 
 # elasticsearch setting
 spring.elasticsearch.uris=http://223.130.129.227:9200
