--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.thymeleaf.suffix=.html
 file.upload-dir=C:/wellfit/upload/profile
 
 # MyBatis 설정
-mybatis.type-aliases-package=com.example.demo.data.dto,com.example.demo.dto
+mybatis.type-aliases-package=com.example.demo.dto
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.configuration.cache-enabled=false
 mybatis.configuration.lazy-loading-enabled=true
