--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,17 @@ spring.datasource.url=jdbc:mysql://db-3295s4-kr.vpc-pub-cdb.ntruss.com/wellfit-d
 spring.datasource.username=manager
 spring.datasource.password=bitcamp!@#123
 
+# multipart file size setting
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # mybatis setting
 mybatis.type-aliases-package=com.example.demo.dto
 mybatis.mapper-locations=/mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # elasticsearch setting
-spring.elasticsearch.uris=http://223.130.129.227:9200
+spring.elasticsearch.uris=http://223.130.129.227:9200/223.130.129.227:9200
+
+file.upload-dir=uploads
