--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # mybatis setting
-mybatis.type-aliases-package=com.example.demo.dto
+mybatis.type-aliases-package=com.example.demo.dto, com.example.demo.chat.dto
 mybatis.mapper-locations=/mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
