--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # mybatis setting
-mybatis.type-aliases-package=com.example.demo.dto, com.example.demo.chat.dto
+mybatis.type-aliases-package=com.example.demo.dto
 mybatis.mapper-locations=/mapper/**/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 # elasticsearch setting
 spring.elasticsearch.uris=http://223.130.129.227:9200/223.130.129.227:9200
 
-file.upload-dir=uploads
+file.upload-dir=C:/wellfit/upload/profile
