체중, 운동입력, 기록 페이지 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # elasticsearch setting
 spring.elasticsearch.uris=http://223.130.129.227:9200/223.130.129.227:9200
 
+# naver api setting
+ncp.accessKey= ncp_iam_???
+ncp.secretKey= ncp_iam_???
+ncp.regionName= kr-standard
+ncp.endPoint= https://kr.object.ncloudstorage.com
+
+# object storage ???? ????
 file.upload-dir=C:/wellfit/upload/profile
