--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.elasticsearch.uris=http://223.130.129.227:9200/223.130.129.227:9200
 
 file.upload-dir=C:/wellfit/upload/profile
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
+
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=5
+spring.redis.lettuce.pool.min-idle=1
