--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,13 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.apache.commons:commons-pool2' // 커넥션 풀
+	// NCP S3용 Spring Cloud AWS Starter
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
 
+	// AWS SDK for S3 (v1.x)
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.416'
 	// MySQL Connector
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
