통계 페이지 추가, 디자인 조금 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ ncp.accessKey=ncp_iam_BPASKR9O69BNAQAQmnQx
 ncp.secretKey=ncp_iam_BPKSKR8hF41LS5FZiVhXADaqP2Rw33mdWz
 ncp.regionName=kr-standard
 ncp.endPoint=https://kr.object.ncloudstorage.com
+file.upload-dir=C:/wellfit/upload/profile
