--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ ncp.endPoint=https://kr.object.ncloudstorage.com
 file.upload-dir=C:/wellfit/upload/profile
 
 
-spring.redis.host=localhost
+spring.redis.host=223.130.137.254
 spring.redis.port=6379
 spring.redis.password=
 
