디자인 수정완료

--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,6 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.apache.commons:commons-pool2' // 커넥션 풀dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	//add gradle-naver storage
@@ -53,9 +51,9 @@ dependencies {
 	// websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
-	// JFreeChart 의존성
-	implementation 'org.jfree:jfreechart:1.5.3'
-	implementation 'org.jfree:jcommon:1.0.24'
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.apache.commons:commons-pool2' // 커넥션 풀dependencies
 
 }
 
